--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!-- to be reworked -->
     </head>
     <body> 
-        <nav class="navbar rounded-b-xl" id="navbar">
+        <nav class="navbar" id="navbar">
             <div class="flex justify-between items-center p-4">
                 <div class="text-2xl font-bold text-red-50 flex justify-between">
                     <img alt="pfp" class="w-10 rounded-full padding-l mr-3" src="https://avatars.githubusercontent.com/u/87974560?v=4" />
@@ -36,17 +36,29 @@
             </div>
         </nav>
 
-        <div class="card">
-            <h1>lmao</h1>
-            <p>this is a card</p>
-            <span class="active-badge">Active!</span>
-            <span class="warning-badge">Oh no!</span>
-            <span class="error-badge">Error!</span>
-        </div>
 
-        <div class="card">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </div>
+        <div class="container flex flex-wrap justify-center">
+            <div class="card">
+                <h1>lmao</h1>
+                <p>this is a card</p>
+                <span class="active-badge">Active!</span>
+                <span class="warning-badge">Oh no!</span>
+                <span class="error-badge">Error!</span>
+                <span class="missing-badge">404</span>
 
+                <table>
+                    <tr>
+                        <td>Server 1</td>
+                        <td>Server 2</td>
+                        <td>Server 3</td>
+                    </tr>
+                    <tr>
+                        <td><span class="active-badge"></span></td>
+                    </tr>
+                </table>
+
+            </div> 
+
+        </div>
     </body> 
 </html>
